log/build_2025-12-18_17-59-23/tower_builder/stderr.log
  File "/home/user/Jina/install/tower_builder/lib/python3.10/site-packages/tower_builder/main.py", line 23
    from tower_builder.camera(ori) import BlockDetectionSystem
                             ^
SyntaxError: invalid syntax

